build: JDK 21
Signed-off-by: manticore-projects <andreas@manticore-projects.com>